--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drip and Bites TikTok Ad</title>
+    <title>Drip and Bites TikTok Ad - Lively Version</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+
         body {
             margin: 0;
             padding: 0;
@@ -29,13 +31,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to bottom, #d2a679, #8b5a2b);
+            background: linear-gradient(135deg, #d2a679, #8b5a2b, #ff4500, #ffd700);
             opacity: 0.8;
-            animation: bgPulse 5s infinite alternate;
+            animation: bgRainbowPulse 5s infinite alternate;
         }
-        @keyframes bgPulse {
-            0% { opacity: 0.8; }
-            100% { opacity: 1; }
+        @keyframes bgRainbowPulse {
+            0% { opacity: 0.7; filter: hue-rotate(0deg); }
+            100% { opacity: 1; filter: hue-rotate(60deg); }
         }
         .cookie-box {
             position: absolute;
@@ -44,12 +46,16 @@
             transform: translate(-50%, -50%);
             width: 80%;
             opacity: 0;
-            animation: fadeInBounce 2s forwards 1s;
+            animation: fadeInBounceRotate 2s forwards 1s, wiggle 0.5s infinite alternate 3s;
         }
-        @keyframes fadeInBounce {
-            0% { opacity: 0; transform: translate(-50%, -50%) scale(0.5); }
-            60% { opacity: 1; transform: translate(-50%, -50%) scale(1.1); }
-            100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+        @keyframes fadeInBounceRotate {
+            0% { opacity: 0; transform: translate(-50%, -50%) scale(0.5) rotate(-10deg); }
+            60% { opacity: 1; transform: translate(-50%, -50%) scale(1.2) rotate(10deg); }
+            100% { opacity: 1; transform: translate(-50%, -50%) scale(1) rotate(0deg); }
+        }
+        @keyframes wiggle {
+            0% { transform: translate(-50%, -50%) rotate(-2deg); }
+            100% { transform: translate(-50%, -50%) rotate(2deg); }
         }
         .cookie-box img {
             width: 100%;
@@ -62,51 +68,60 @@
             top: 10%;
             left: 50%;
             transform: translateX(-50%);
-            font-family: 'Arial', sans-serif;
-            font-size: 32px;
+            font-family: 'Poppins', sans-serif;
+            font-size: 36px;
             color: #fff;
             text-shadow: 2px 2px 4px #000;
             opacity: 0;
-            animation: slideIn 1.5s forwards;
+            animation: slideInPulse 1.5s forwards, colorShift 3s infinite alternate 1.5s;
         }
-        @keyframes slideIn {
-            0% { opacity: 0; transform: translate(-50%, -50px); }
-            100% { opacity: 1; transform: translate(-50%, 0); }
+        @keyframes slideInPulse {
+            0% { opacity: 0; transform: translate(-50%, -50px) scale(0.8); }
+            100% { opacity: 1; transform: translate(-50%, 0) scale(1); }
+        }
+        @keyframes colorShift {
+            0% { color: #ffd700; }
+            100% { color: #ff4500; }
         }
         .subtitle {
             position: absolute;
-            bottom: 20%;
+            bottom: 25%;
             left: 50%;
             transform: translateX(-50%);
-            font-family: 'Arial', sans-serif;
-            font-size: 24px;
+            font-family: 'Poppins', sans-serif;
+            font-size: 26px;
             color: #ffd700;
             text-shadow: 1px 1px 2px #000;
             opacity: 0;
-            animation: fadeIn 2s forwards 2s;
+            animation: fadeInBounce 2s forwards 2s;
         }
-        @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+        @keyframes fadeInBounce {
+            0% { opacity: 0; transform: translateX(-50%) translateY(20px); }
+            60% { opacity: 1; transform: translateX(-50%) translateY(-10px); }
+            100% { opacity: 1; transform: translateX(-50%) translateY(0); }
         }
         .call-to-action {
             position: absolute;
             bottom: 10%;
             left: 50%;
             transform: translateX(-50%);
-            font-family: 'Arial', sans-serif;
-            font-size: 20px;
+            font-family: 'Poppins', sans-serif;
+            font-size: 22px;
             color: #fff;
             background-color: #ff4500;
-            padding: 10px 20px;
-            border-radius: 20px;
-            opacity: 0;
-            animation: popIn 1s forwards 3s;
+            padding: 12px 24px;
+            border-radius: 30px;
+opacity: 0;
+            animation: popIn 1s forwards 3s, pulse 1s infinite alternate 4s;
             cursor: pointer;
         }
         @keyframes popIn {
             0% { opacity: 0; transform: translateX(-50%) scale(0); }
             100% { opacity: 1; transform: translateX(-50%) scale(1); }
+        }
+        @keyframes pulse {
+            0% { transform: translateX(-50%) scale(1); }
+            100% { transform: translateX(-50%) scale(1.05); }
         }
         .drip-effect {
             position: absolute;
@@ -119,37 +134,63 @@
         .drip {
             position: absolute;
             width: 20px;
-            height: 20px;
+            height: 30px;
             background-color: #8b4513; /* Chocolate drip color */
-            border-radius: 50%;
-            animation: dripFall 3s infinite;
+            border-radius: 50% 50% 0 0 / 100% 100% 0 0;
+            animation: dripFall 2s infinite linear;
+            opacity: 0.8;
         }
-        .drip:nth-child(1) { left: 20%; animation-delay: 0s; }
-        .
-drip:nth-child(2) { left: 40%; animation-delay: 0.5s; }
-        .drip:nth-child(3) { left: 60%; animation-delay: 1s; }
-        .drip:nth-child(4) { left: 80%; animation-delay: 1.5s; }
+        .drip:nth-child(1) { left: 10%; animation-delay: 0s; width: 25px; animation-duration: 2.5s; }
+        .drip:nth-child(2) { left: 30%; animation-delay: 0.3s; width: 15px; animation-duration: 1.8s; }
+        .drip:nth-child(3) { left: 50%; animation-delay: 0.6s; width: 20px; animation-duration: 2.2s; }
+        .drip:nth-child(4) { left: 70%; animation-delay: 0.9s; width: 18px; animation-duration: 2s; }
+        .drip:nth-child(5) { left: 90%; animation-delay: 1.2s; width: 22px; animation-duration: 2.3s; }
         @keyframes dripFall {
-            0% { top: -20px; opacity: 1; }
-            100% { top: 100%; opacity: 0; }
+            0% { top: -30px; opacity: 1; transform: scale(1); }
+            100% { top: 100%; opacity: 0; transform: scale(1.5); }
+        }
+        .sparkle {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #ffd700;
+            border-radius: 50%;
+            animation: sparkleFloat 4s infinite ease-in-out;
+            opacity: 0.6;
+        }
+        .sparkle:nth-child(1) { top: 20%; left: 15%; animation-delay: 0s; }
+        .sparkle:nth-child(2) { top: 40%; left: 25%; animation-delay: 1s; }
+        .sparkle:nth-child(3) { top: 60%; left: 75%; animation-delay: 0.5s; }
+        .sparkle:nth-child(4) { top: 80%; left: 85%; animation-delay: 1.5s; }
+        @keyframes sparkleFloat {
+            0% { transform: translateY(0) scale(1); opacity: 0.6; }
+            50% { transform: translateY(-20px) scale(1.5); opacity: 1; }
+            100% { transform: translateY(0) scale(1); opacity: 0.6; }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="background"></div>
-        <div class="title">Discover Drip and Bites!</div>
+        <div class="title">Dive into Drip and Bites! 🍪✨</div>
         <div class="cookie-box">
             <!-- Replace with your image path when hosting -->
             <img src="image.jpeg" alt="Drip and Bites Cookies">
         </div>
-        <div class="subtitle">Irresistibly Chewy & Chocolatey Goodness</div>
-        <div class="call-to-action">Order Now! 🍪</div>
+        <div class="subtitle">Explosively Chewy & Drippin' with Fun! 😋</div>
+        <div class="call-to-action">Grab Yours Now! 🔥🍫</div>
         <div class="drip-effect">
             <div class="drip"></div>
             <div class="drip"></div>
             <div class="drip"></div>
             <div class="drip"></div>
+            <div class="drip"></div>
+        </div>
+        <div class="sparkle-effect">
+            <div class="sparkle"></div>
+            <div class="sparkle"></div>
+            <div class="sparkle"></div>
+            <div class="sparkle"></div>
         </div>
     </div>
     <script>
@@ -160,3 +201,4 @@ drip:nth-child(2) { left: 40%; animation-delay: 0.5s; }
     </script>
 </body>
 </html>
+```​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
